@@ -5,7 +5,7 @@ net.listen('0.0.0.0')
 net.listen('0.0.0.0', 853, {tls=true})
 
 -- Auto-maintain root TA
-trust_anchors.file = '/data/root.keys'
+trust_anchors.file = '/etc/knot-resolver/root.keys'
 
 -- Load Useful modules
 modules = {
@@ -38,4 +38,3 @@ function print_help()
 	   .. 'verbose(true)\n')
 end
 print_help()
-event.after(11000, print_help)
